--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,9 @@
     margin: 0;
     box-sizing: border-box;
   }
+
   header{
+      grid-area: H;
     font-family: 'Rubik Mono One', sans-serif;
     font-size: 50px;
     padding: 1rem;
@@ -28,9 +30,9 @@
   .main-container {
     display: grid;
     grid-template-areas:
-    "H H H H "
-    "A A M M "
-    "F F F F ";
+    "H H H H"
+    "A M M M"
+    "F F F F";
   }
 .main-container h2{
       padding:1rem;
@@ -98,6 +100,7 @@ aside {
   }
 
   footer{
+    grid-area: F;
     font-family: 'Marcellus', serif;
     background-color: rgb(178, 230, 212);
     text-align: center;
